--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,19 +1,44 @@
 <ion-view title="Login">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
-        <form class="list">
-            <ion-list>
-                <label class="item item-input">
-                    <span class="input-label">Username</span>
-                    <input type="text" placeholder="">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Password</span>
-                    <input type="password" placeholder="">
-                </label>
-            </ion-list>
-            <div class="spacer" style="height: 40px;"></div>
+
+      <form class="list">
+
+      <div ng-controller="MainController as vm">
+
+        <a ui-sref="tabsController.home"><button ng-click="vm.facebookLogin()">Log in with Facebook</button></a>
+        <a ui-sref="tabsController.home"><button ng-click="vm.googleLogin()">Log in with Google</button></a>
+        <button ng-click="vm.facebookLogin()">Log in with Facebook</button>
+        <!--<button ng-click="vm.googleLogin()">Log in with Google</button>-->
+        <button ng-click="vm.deleteFacebookData()">Delete data</button>
+        <br />
+        <div>{{ vm.message }}</div>
+        <br />
+
+        <!-- click profile pic to display raw data from facebook -->
+        <div>{{ vm.fbData.facebook.displayName }}</div>
+        <div ng-click="vm.showData=!vm.showData">
+          <img ng-show="vm.fbData.facebook.profileImageURL" ng-src="{{ vm.fbData.facebook.profileImageURL }}">
+        </div>
+        <pre ng-show="vm.showData" ng-bind="vm.fbData.facebook | json"></pre>
+
+      </div>
+
+
+            <!--<ion-list>-->
+                <!--<label class="item item-input">-->
+                    <!--<span class="input-label">Username</span>-->
+                    <!--<input type="text" placeholder="">-->
+                <!--</label>-->
+                <!--<label class="item item-input">-->
+                    <!--<span class="input-label">Password</span>-->
+                    <!--<input type="password" placeholder="">-->
+                <!--</label>-->
+            <!--</ion-list>-->
+            <!--<div class="spacer" style="height: 40px;"></div>-->
+
             <a ui-sref="tabsController.home" class="button button-stable button-block ">Log in</a>
-            <a ui-sref="signup" class="button button-positive button-clear button-block ">Or create an account</a>
+            <!--<a ui-sref="signup" class="button button-positive button-clear button-block ">Or create an account</a>-->
         </form>
     </ion-content>
 </ion-view>
+
