--- a/www/templates/artistNameSearch.html
+++ b/www/templates/artistNameSearch.html
@@ -1,15 +1,25 @@
 <ion-view title="Artist Name Search">
-    <ion-content overflow-scroll="true" padding="true" class="has-header has-footer">
-        <form class="list">
-            <label class="item item-input">
-                <span class="input-label">Input</span>
-                <input type="text" placeholder="">
-            </label>
-        </form>
-        <ion-list>
-            <ion-item ui-sref="tabsController.artistHome">Artist 1</ion-item>
-            <ion-item ui-sref="tabsController.artistHome">Artist 2</ion-item>
-            <ion-item ui-sref="tabsController.artistHome">Artist 3</ion-item>
-        </ion-list>
-    </ion-content>
+  <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="NameController as nc">
+    <form class="list">
+      <label class="item item-input">
+        <!--<span class="input-label">Input</span>-->
+        <input type="text" placeholder="Type Artist Name" ng-model="nc.artist">
+        <button type="submit" ng-click="nc.artistSearch(nc.artist)">Search</button>
+
+      </label>
+
+      <div>{{nc.results | json}}</div>
+      <br/>
+      <a href="{{nc.found}}">Result</a>
+
+      <image src="{{nc.results}}"></image>
+    </form>
+    <ion-list>
+      <ion-item ui-sref="tabsController.artistHome">Artist 1</ion-item>
+      <ion-item ui-sref="tabsController.artistHome">Artist 2</ion-item>
+      <ion-item ui-sref="tabsController.artistHome">Artist 3</ion-item>
+
+
+    </ion-list>
+  </ion-content>
 </ion-view>
