--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,7 +7,11 @@
         <ion-item ui-sref="tabsController.artistNameSearch">Artist Name Search</ion-item>
         <ion-item ui-sref="tabsController.songTitleSearch">Song Title Search</ion-item>
         <ion-item ui-sref="tabsController.musiqGenreSearch">Musiq Genre Search</ion-item>
+        <ion-item><a href="spotify:album:4RdfF1YfrJcVsN8sjCc9we">some text</a></ion-item>
       </ion-list>
+
+
+
 
   </ion-content>
 </ion-view>
