--- a/www/templates/newMusiq.html
+++ b/www/templates/newMusiq.html
@@ -1,10 +1,25 @@
-<ion-view title="New Musiq">
-    <ion-content overflow-scroll="true" padding="true" class="has-header">
-        <ion-list></ion-list>
+<ion-view title="Album Search">
+    <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="AlbumController as ac">
+        <form class="list">
+            <label class="item item-input">
+                <!--<span class="input-label">Input</span>-->
+                <input type="text" placeholder="Type Artist Name" ng-model="ac.artist">
+                <button type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
+
+            </label>
+
+            <div>{{ac.results | json}}</div>
+            <br/>
+            <a href="{{ac.results}}">Result</a>
+
+            <image src="{{ac.results}}"></image>
+        </form>
         <ion-list>
             <ion-item ui-sref="tabsController.artistHome">Artist 1</ion-item>
             <ion-item ui-sref="tabsController.artistHome">Artist 2</ion-item>
             <ion-item ui-sref="tabsController.artistHome">Artist 3</ion-item>
+
+
         </ion-list>
     </ion-content>
 </ion-view>
