added related artist
zdfkn

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,8 +6,7 @@
         <ion-item ui-sref="tabsController.newMusiq">New Musiq</ion-item>
         <ion-item ui-sref="tabsController.artistNameSearch">Artist Name Search</ion-item>
         <ion-item ui-sref="tabsController.songTitleSearch">Song Title Search</ion-item>
-        <ion-item ui-sref="tabsController.musiqGenreSearch">Musiq Genre Search</ion-item>
-        <ion-item><a href="spotify:album:4RdfF1YfrJcVsN8sjCc9we">some text</a></ion-item>
+        <ion-item ui-sref="tabsController.musiqGenreSearch">Related Artist Search</ion-item>
       </ion-list>
 
 
