Update the Music on click
Made it so the music would start on-click, and stop on double-click.
Probably not the way we want it, but at least it’s progress.
I also made it stop the music on input change, and with the pause
button. There’s quite a bit of tweeking, but I think I’m on the right
track.

--- a/www/templates/songTitleSearch.html
+++ b/www/templates/songTitleSearch.html
@@ -3,18 +3,17 @@
         <form class="list">
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
-                <input type="text" placeholder="Type Song Title Name" ng-model="tc.song">
+                <input ng-change="tc.pauseTrack()" type="text" placeholder="Type Song Title Name" ng-model="tc.song">
 
             </label>
             <br>
             <br>
 
             <button type="submit" ng-click="tc.songTitleSearch(tc.song)">Search</button>
-
-
-            
             <br/>
-            <image src="{{tc.results}}"></image>
+            <br/>
+            <image class="cover" src="{{tc.results}}" ng-click="tc.playTrack()" ng-dblclick="tc.pauseTrack()"></image>
+            <button ng-click="tc.pauseTrack()">Pause</button>
         </form>
         <ion-list>
             <ion-item ui-sref="tabsController.artistHome">Song Title 1</ion-item>
