--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -22,7 +22,7 @@
 
     <ion-list>
     <ion-item ui-sref="tabsController.artistBiography">Biography</ion-item>
-    <ion-item href="#" onclick="window.open('http://www.billboard.com/search/site/{{nc.found}}?f[0]=ss_bb_type%3Aarticle'); return false;">News</ion-item>
+    <ion-item href="#" onclick="window.open('http://www.billboard.com/search/site/{{ah.found}}?f[0]=ss_bb_type%3Aarticle'); return false;">News</ion-item>
     <ion-item href="#" ng-click="$window.open('{{nc.news}}', '_blank', 'location=yes'); return false;">News</ion-item>
     <ion-item href="#" onclick="window.open('http://www.azlyrics.com/', '_system', 'location=yes'); return false;">Lyrics</ion-item>
     <ion-item href="#" onclick="window.open('http://www.amazon.com/', '_blank', 'location=yes'); return false;">Purchase</ion-item>
