--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -1,32 +1,38 @@
 <ion-view title="Artist Home">
   <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="ArtistHomeController as ah">
     <form class="list">
-
-      <image src="{{ah.results}}"></image>
+      <h2>{{ah.bandName}}</h2>
+      <image src="{{ah.bandPic}}"></image>
     </form>
 
-    <div ui-sref="tabsController.artistHome">Go to the {{ah.found}} page.</div>
-    <br/>
-    <a href="{{ah.news}}">News</a>
-    <br/>
-    <a href="{{ah.bio}}">Wiki</a>
-    <br/>
-    <a href="{{ah.track1}}" target="blank">{{ah.track1Name}}</a>
-    <a href="{{ah.purchase1}}" target="blank">   Purchase Track</a><br/>
-    <a href="{{ah.track2}}" target="blank">{{ah.track2Name}}</a>
-    <a href="{{ah.purchase2}}" target="blank">   Purchase Track</a><br/>
-    <a href="{{ah.track3}}" target="blank">{{ah.track3Name}}</a>
-    <a href="{{ah.purchase3}}" target="blank">   Purchase Track</a>
+    <h3 ng-click="ah.artistSearch(ah.bandName)">Get Stuff</h3>
 
-    <!--<div ng-click="nc.songPlay(nc.artist)">Testing Song</div>-->
-
+    <h2>BAND TRACKS</h2>
     <ion-list>
-    <ion-item ui-sref="tabsController.artistBiography">Biography</ion-item>
-    <ion-item href="#" onclick="window.open('http://www.billboard.com/search/site/{{ah.found}}?f[0]=ss_bb_type%3Aarticle'); return false;">News</ion-item>
-    <ion-item href="#" ng-click="$window.open('{{nc.news}}', '_blank', 'location=yes'); return false;">News</ion-item>
-    <ion-item href="#" onclick="window.open('http://www.azlyrics.com/', '_system', 'location=yes'); return false;">Lyrics</ion-item>
-    <ion-item href="#" onclick="window.open('http://www.amazon.com/', '_blank', 'location=yes'); return false;">Purchase</ion-item>
+      <ion-item href="#" ng-click="ah.songPlay(ah.track1)">{{ah.track1Name}}</ion-item>
     </ion-list>
+    <button ng-click="ah.songPause()">Stop Track</button>
+    <button ng-click="ah.lyricsPage(ah.track1Name)">Track Lyrics</button>
+    <button ng-click="ah.amazonPage(ah.track1Name)">Amazon</button>
+    <ion-list>
+      <ion-item href="#" ng-click="ah.songPlay(ah.track2)">{{ah.track2Name}}</ion-item>
+    </ion-list>
+    <button ng-click="ah.songPause()">Stop Track</button>
+    <button ng-click="ah.lyricsPage(ah.track2Name)">Track Lyrics</button>
+    <button ng-click="ah.amazonPage(ah.track2Name)">Amazon</button>
+    <ion-list>
+      <ion-item href="#" ng-click="ah.songPlay(ah.track3)">{{ah.track3Name}}</ion-item>
+    </ion-list>
+    <button ng-click="ah.songPause()">Stop Track</button>
+    <button ng-click="ah.lyricsPage(ah.track3Name)">Track Lyrics</button>
+    <button ng-click="ah.amazonPage(ah.track3Name)">Amazon</button>
+
+    <h2>BAND INFO</h2>
+    <ion-list>
+      <ion-item href="#" ng-click="ah.outsidePage(ah.news)">News</ion-item>
+      <ion-item href="#" ng-click="ah.outsidePage(ah.bio)">Wiki</ion-item>
+    </ion-list>
+
 
   </ion-content>
 </ion-view>
