--- a/www/templates/artistNameSearch.html
+++ b/www/templates/artistNameSearch.html
@@ -12,10 +12,10 @@
 
       <br/>
 
-      <image src="{{nc.results}}"></image>
+      <image src="{{nc.bandPic}}"></image>
     </form>
 
-    <h2 ui-sref="tabsController.artistHome">GO TO THE "{{nc.foundCap}}" PAGE.</h2>
+    <h2 ui-sref="tabsController.artistHome">GO TO THE "{{nc.bandNameCap}}" PAGE.</h2>
     <br/>
 
     <h2>BAND TRACKS</h2>
