--- a/www/templates/songTitleSearch.html
+++ b/www/templates/songTitleSearch.html
@@ -12,15 +12,23 @@
             <button type="submit" ng-click="tc.songTitleSearch(tc.song)">Search</button>
             <br/>
             <br/>
-            <image class="cover" src="{{tc.results}}" ng-click="tc.playTrack()" ng-dblclick="tc.pauseTrack()"></image>
-            <button ng-click="tc.pauseTrack()">Pause</button>
+            <ul ng-repeat="item in tc.results">
+                <li class="item item-thumbnail-left">
+                    <image class="rcImg" class="cover" src="{{item.album.images[1].url}}" ng-click="tc.playTrack(item.preview_url)" ng-dblclick="tc.pauseTrack()"></image>
+
+                    <button class="buttonStyle ion-play button button-small" ng-click="tc.playTrack(item.preview_url)"></button>
+                    <button class="buttonStyle ion-stop button button-small" ng-click="tc.pauseTrack()"></button>
+                    <br/>
+                    <div>
+                    {{"Artist: " + item.artists[0].name}}</br>
+
+                    {{"Popularity: " + item.popularity}}</br>
+                    </div>
+                    <div class="item-button-right">
+                    <button class="button item-button-right" ui-sref="tabsController.artistHome">Go to Artist Page</button>
+                    </div>
+                </li>
+            </ul>
         </form>
-        <ion-list>
-            <ion-item ui-sref="tabsController.artistHome">Song Title 1</ion-item>
-            <ion-item ui-sref="tabsController.artistHome">Song Title 2</ion-item>
-            <ion-item ui-sref="tabsController.artistHome">Song Title 3</ion-item>
-
-
-        </ion-list>
     </ion-content>
 </ion-view>
