--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -7,26 +7,27 @@
 
     <h3 ng-click="ah.artistSearch(ah.bandName)">Get Stuff</h3>
 
-    <h2>BAND TRACKS</h2>
-    <ion-list>
-      <ion-item href="#" ng-click="ah.songPlay(ah.track1)">{{ah.track1Name}}</ion-item>
-    </ion-list>
-    <button ng-click="ah.songPause()">Stop Track</button>
-    <button ng-click="ah.lyricsPage(ah.track1Name)">Track Lyrics</button>
-    <button ng-click="ah.amazonPage(ah.track1Name)">Amazon</button>
-    <ion-list>
-      <ion-item href="#" ng-click="ah.songPlay(ah.track2)">{{ah.track2Name}}</ion-item>
-    </ion-list>
-    <button ng-click="ah.songPause()">Stop Track</button>
-    <button ng-click="ah.lyricsPage(ah.track2Name)">Track Lyrics</button>
-    <button ng-click="ah.amazonPage(ah.track2Name)">Amazon</button>
-    <ion-list>
-      <ion-item href="#" ng-click="ah.songPlay(ah.track3)">{{ah.track3Name}}</ion-item>
-    </ion-list>
-    <button ng-click="ah.songPause()">Stop Track</button>
-    <button ng-click="ah.lyricsPage(ah.track3Name)">Track Lyrics</button>
-    <button ng-click="ah.amazonPage(ah.track3Name)">Amazon</button>
-
+    <h2 ng-click="ah.bandTracks()">BAND TRACKS</h2>
+    <div ng-show="ah.bandClicked">
+     <ion-list>
+       <ion-item href="#" ng-click="ah.songPlay(ah.track1)">{{ah.track1Name}}</ion-item>
+     </ion-list>
+     <button ng-click="ah.songPause()">Stop Track</button>
+     <button ng-click="ah.lyricsPage(ah.track1Name)">Track Lyrics</button>
+     <button ng-click="ah.amazonPage(ah.track1Name)">Amazon</button>
+     <ion-list>
+       <ion-item href="#" ng-click="ah.songPlay(ah.track2)">{{ah.track2Name}}</ion-item>
+     </ion-list>
+     <button ng-click="ah.songPause()">Stop Track</button>
+     <button ng-click="ah.lyricsPage(ah.track2Name)">Track Lyrics</button>
+     <button ng-click="ah.amazonPage(ah.track2Name)">Amazon</button>
+     <ion-list>
+       <ion-item href="#" ng-click="ah.songPlay(ah.track3)">{{ah.track3Name}}</ion-item>
+     </ion-list>
+     <button ng-click="ah.songPause()">Stop Track</button>
+     <button ng-click="ah.lyricsPage(ah.track3Name)">Track Lyrics</button>
+     <button ng-click="ah.amazonPage(ah.track3Name)">Amazon</button>
+    </div>
     <h2>BAND INFO</h2>
     <ion-list>
       <ion-item href="#" ng-click="ah.outsidePage(ah.news)">News</ion-item>
