--- a/www/templates/newMusiq.html
+++ b/www/templates/newMusiq.html
@@ -7,19 +7,20 @@
                 <button type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
 
             </label>
-
-            <div>{{ac.results | json}}</div>
             <br/>
-            <a href="{{ac.results}}">Result</a>
-
-            <image src="{{ac.results}}"></image>
+            <ul ng-repeat="item in ac.results">
+                <li class="item item-thumbnail-left">
+                    <image src="{{item.images[1].url}}"></image>
+                    <br/>
+                    <br/> <br/>
+                    <div>
+                        {{"Album: " + item.name}}</br>
+                    </div>
+                    <div class="item-button-right">
+                        <button class="button item-button-right" ui-sref="tabsController.artistHome">Artist Page</button>
+                    </div>
+                </li>
+            </ul>
         </form>
-        <ion-list>
-            <ion-item ui-sref="tabsController.artistHome">Artist 1</ion-item>
-            <ion-item ui-sref="tabsController.artistHome">Artist 2</ion-item>
-            <ion-item ui-sref="tabsController.artistHome">Artist 3</ion-item>
-
-
-        </ion-list>
     </ion-content>
 </ion-view>
