--- a/www/templates/songTitleSearch.html
+++ b/www/templates/songTitleSearch.html
@@ -25,7 +25,7 @@
                     {{"Popularity: " + item.popularity}}</br>
                     </div>
                     <div class="item-button-right">
-                    <button class="button item-button-right" ui-sref="tabsController.artistHome">Go to Artist Page</button>
+                    <button class="button item-button-right" ui-sref="tabsController.artistHome">Artist Page</button>
                     </div>
                 </li>
             </ul>
