--- a/www/templates/newMusiq.html
+++ b/www/templates/newMusiq.html
@@ -3,7 +3,7 @@
         <form class="list">
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
-                <input type="text" placeholder="Type Artist Name" ng-model="ac.artist">
+                <input type="text" placeholder="Type Album Name" ng-model="ac.artist">
                 <button type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
 
             </label>
