--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,8 +2,8 @@
   <ion-content overflow-scroll="true" padding="true" class="has-header" ng-init="loggedIn = false">
 
       <ion-list>
-        <ion-item ui-sref="tabsController.popularMusiq">Popular Musiq</ion-item>
-        <ion-item ui-sref="tabsController.newMusiq">New Musiq</ion-item>
+        <!--<ion-item ui-sref="tabsController.popularMusiq">Popular Musiq</ion-item>-->
+        <ion-item ui-sref="tabsController.newMusiq">Album Search</ion-item>
         <ion-item ui-sref="tabsController.artistNameSearch">Artist Name Search</ion-item>
         <ion-item ui-sref="tabsController.songTitleSearch">Song Title Search</ion-item>
         <ion-item ui-sref="tabsController.musiqGenreSearch">Related Artist Search</ion-item>
