--- a/www/templates/newMusiq.html
+++ b/www/templates/newMusiq.html
@@ -4,18 +4,18 @@
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
                 <input type="text" placeholder="Type Artist Name" ng-model="ac.artist">
-                <button type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
+                <button class="hiddenBtn" type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
+
 
             </label>
-            <br/>
             <ul ng-repeat="item in ac.results">
                 <li class="item item-thumbnail-left">
-                    <image src="{{item.images[1].url}}"></image>
+                    <img ng-src="{{item.images[1].url}}"/>
                     <br/>
-                    <br/> <br/>
-                    <div>
+                    <br/>
+                    <span>
                         {{"Album: " + item.name}}</br>
-                    </div>
+                    </span>
                     <div class="item-button-right">
                         <button class="button item-button-right" ui-sref="tabsController.artistHome">Artist Page</button>
                     </div>
