--- a/www/templates/songTitleSearch.html
+++ b/www/templates/songTitleSearch.html
@@ -3,18 +3,14 @@
         <form class="list">
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
-                <input ng-change="tc.pauseTrack()" type="text" placeholder="Type Song Title Name" ng-model="tc.song">
+                <input type="text" placeholder="Type Song Title Name" ng-model="tc.song">
+                <button class="hiddenBtn" type="submit" ng-click="tc.songTitleSearch(tc.song)"></button>
 
             </label>
-            <br>
-            <br>
 
-            <button type="submit" ng-click="tc.songTitleSearch(tc.song)">Search</button>
-            <br/>
-            <br/>
             <ul ng-repeat="item in tc.results">
                 <li class="item item-thumbnail-left">
-                    <image class="rcImg" class="cover" src="{{item.album.images[1].url}}" ng-click="tc.playTrack(item.preview_url)" ng-dblclick="tc.pauseTrack()"></image>
+                    <img class="rcImg" class="cover" ng-src="{{item.album.images[1].url}}" ng-click="tc.playTrack(item.preview_url)" ng-dblclick="tc.pauseTrack()"/>
 
                     <button class="buttonStyle ion-play button button-small" ng-click="tc.playTrack(item.preview_url)"></button>
                     <button class="buttonStyle ion-stop button button-small" ng-click="tc.pauseTrack()"></button>
