Updated Related Artist Search
Related Artist now routes the correct band on click

--- a/www/templates/relatedArtistSearch.html
+++ b/www/templates/relatedArtistSearch.html
@@ -10,7 +10,7 @@
             </label>
 
             <ul class="list" ng-repeat="artist in rc.artistArray">
-                <li class="item item-thumbnail-left" ui-sref="tabsController.artistHome">
+                <li class="item item-thumbnail-left" ui-sref="tabsController.artistHome" ng-click="rc.currentArtist(artist.name, artist.images[0].url)">
                     <img class="rcImg" ng-src="{{artist.images[1].url}}"/>
                     <span class="rcArtistName">{{artist.name}}</span> <br>
                     {{"Popularity " + artist.popularity}} <br>
