Feedback and About tab updates
Feedback now works, and I’ve added some text to the About tab.

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,9 +1,11 @@
 <ion-view title="About">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
-        <div>
-            <p>Some friendly
-                <strong>markdown</strong>
+        <div class="aboutText">
+            <p>Welcome to <strong>Musiquality!!</strong>
             </p>
+            <span>
+                Musiquality allows you to expand your music library, search for Artist, Albums, Songs, Related Artist, and much, much more.
+            </span>
         </div>
     </ion-content>
 </ion-view>
