--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -11,3 +11,14 @@
 .hiddenBtn{
     display: none;
 }
+.feedbackInput{
+    height: 150px;
+    width: 100%;
+}
+h4{
+    color: green;
+    text-align: center;
+}
+.aboutText{
+    text-align: center;
+}
