--- a/www/templates/feedback.html
+++ b/www/templates/feedback.html
@@ -1,14 +1,20 @@
 <ion-view title="Feedback"  ng-init="emails = [{ from: 'John', subject: 'I love angular', date: 'Jan 1' }]">
     <ion-content overflow-scroll="true" padding="true" class="has-header"  ng-controller="FeedbackController as fc">
         <form class="list">
-            <label class="item item-input">
-                <span class="input-label">Input</span>
-                <input type="text" placeholder="">
+            <label class="item">
+                <input class="feedbackInput" type="text" placeholder="Enter your email" ng-model="fc.name">
             </label>
-            <label class="item item-input">
-                <span class="input-label">Text</span><textarea placeholder=""> </textarea>
+            <br/>
+            <label class="item">
+                <span class="input-label"></span>
+                <textarea class="feedbackInput" type="text" placeholder="Enter your feedback" ng-model="fc.messages"></textarea>
             </label>
+
         </form>
-        <button class="button button-stable button-block " ng-click="fc.sendEmail()">Tap me!</button>
+        <button class="button button-stable button-block " ng-click="fc.feedback()">Send</button>
+        <div ng-show="fc.messageSent">
+            <h4>You feedback has been sent.</h4>
+            <h4>Thank You!!</h4>
+        </div>
     </ion-content>
 </ion-view>
