--- a/www/templates/newMusiq.html
+++ b/www/templates/newMusiq.html
@@ -3,27 +3,15 @@
         <form class="list">
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
-<<<<<<< HEAD
-                <input type="text" placeholder="Type Album Name" ng-model="ac.artist">
-                <button type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
-=======
-                <input type="text" placeholder="Type Artist Name" ng-model="ac.artist">
-                <button class="hiddenBtn" type="submit" ng-click="ac.albumSearch(ac.artist)">Search</button>
-
->>>>>>> 48geoffbrown/master
-
+                <input type="text" placeholder="Type Artist Name" ng-model="ac.album">
             </label>
+            <button class="button button-clear" type="submit" ng-click="ac.albumSearch(ac.album)"></button>
             <ul ng-repeat="item in ac.results">
-                <li class="item item-thumbnail-left">
+                <li class="item item-thumbnail-left" ng-click="ac.currentArtist(item.id)">
                     <img ng-src="{{item.images[1].url}}"/>
-                    <br/>
-                    <br/>
                     <span>
                         {{"Album: " + item.name}}</br>
                     </span>
-                    <div class="item-button-right">
-                        <button class="button item-button-right" ui-sref="tabsController.artistHome">Artist Page</button>
-                    </div>
                 </li>
             </ul>
         </form>
