--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -1,27 +1,31 @@
 <ion-view title="Artist Home">
   <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="ArtistHomeController as ah">
     <form class="list">
-      <h2>{{ah.artist}}</h2>
-      <img src="{{ah.bandPic}}"/>
+      <h1 class="fullFont">{{ah.artist}}</h1>
+      <img class="fullImage" src="{{ah.bandPic}}"/>
     </form>
 
-    <ion-item href="#" ng-click="ah.tracks(ah.artist)">Band Tracks</ion-item>
-    <ul ng-repeat="item in ah.trackResults">
-      <li class="item item-thumbnail-left">
-        <h5>{{item.name}}</h5>
-        <img class="rcImg" class="cover" ng-src="{{item.album.images[1].url}}"/>
+    <ion-item href="#" ng-click="ah.tracks(ah.artist)" >Band Tracks</ion-item>
+    <div ng-show="ah.bandClicked">
+     <ul ng-repeat="item in ah.trackResults">
+       <li class="item item-thumbnail-left">
 
-        <button class="buttonStyle ion-play button button-small" ng-click="ah.songPlay(item.preview_url)"></button>
-        <button class="buttonStyle ion-stop button button-small" ng-click="ah.songPause()"></button>
+         <img class="rcImg" class="cover" ng-src="{{item.album.images[1].url}}"/>
 
-        <br/>
+         <button class="buttonStyle ion-play button button-small" ng-click="ah.songPlay(item.preview_url)"></button>
+         <button class="buttonStyle ion-stop button button-small" ng-click="ah.songPause()"></button>
+         </br>
+         <div>
+           {{"Track: " + item.name}} </br>
+           {{"Popularity: " + item.popularity}} </br>
+         </div>
 
-        <div class="item-button-right">
-          <button class="button item-button-right">Purchase</button>
-        </div>
-      </li>
-    </ul>
-
+         <div class="item-button-right">
+           <button class="button item-button-right">Purchase</button>
+         </div>
+       </li>
+     </ul>
+    </div>
     <!--<h3 ng-click="ah.artistSearch(ah.artist)">Get Stuff</h3>-->
 
     <!--<h2 ng-click="ah.bandTracks()">BAND TRACKS</h2>-->
