--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -11,7 +11,7 @@
 .hiddenBtn{
     display: none;
 }
-<<<<<<< HEAD
+
 
 .fullImage {
     width: 100%;
@@ -19,7 +19,8 @@
 
 .fullFont {
     font-size: 3em;
-=======
+}
+
 .feedbackInput{
     height: 150px;
     width: 100%;
@@ -30,5 +31,5 @@ h4{
 }
 .aboutText{
     text-align: center;
->>>>>>> master
+
 }
