--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -22,3 +22,11 @@ h4{
 .aboutText{
     text-align: center;
 }
+#musicIcon{
+    color: green;
+    text-align: center;
+}
+.homeNote{
+    text-align: center;
+    font-size: xx-large;
+}
