--- a/www/templates/relatedArtistSearch.html
+++ b/www/templates/relatedArtistSearch.html
@@ -5,7 +5,7 @@
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
                 <input type="text" placeholder="Type Artist Name" ng-model="rc.artist">
-                <button class="hiddenBtn" type="submit"  ng-click="rc.artistSearch(rc.artist)">Search</button>
+                <button class="button button-clear" type="submit"  ng-click="rc.artistSearch(rc.artist)">Search</button>
 
             </label>
 
