added artist home button
added artist home button

--- a/www/templates/newMusiq.html
+++ b/www/templates/newMusiq.html
@@ -12,8 +12,13 @@
                     <span>
                         {{"Album: " + item.name}}</br>
                     </span>
+                    <div class="item-button-right">
+                        <button class="button item-button-right" ui-sref="tabsController.artistHome" ng-click="tc.currentArtist(item.id)">Artist Page</button>
+                    </div>
                 </li>
+
             </ul>
+
         </form>
     </ion-content>
 </ion-view>
