about page and artist home
added some styling and text to about and added albums tab to artist home

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,11 +1,19 @@
 <ion-view title="About">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <div class="aboutText">
-            <p>Welcome to <strong>Musiquality!!</strong>
+            <p id="aboutTextTitle">Welcome to <strong>Musiquality!!</strong>
+            </p> </br>
+            <p class="aboutTextContent">
+                Musiquality allows you to expand your music library! Search for Artist, Albums, Songs, Related Artist, and much, much more. Listen to previews of millions of songs!
             </p>
-            <span>
-                Musiquality allows you to expand your music library, search for Artist, Albums, Songs, Related Artist, and much, much more.
-            </span>
+            <p class="aboutTextContent">
+                Save your favorite artists
+                to your likes page and discover new artists similar to those you already love and sorted by popularity.
+            </p>
+            <p class="aboutTextContent">
+                Musiquality will enable you to expand your music library and help you to purchase music from quality artists.
+            </p>
+            <p id="aboutTextCreatedBy">Created by:  Geoff Brown, Chris Downs, Jonny Fewkes, and Dan Tuttle. </p>
         </div>
     </ion-content>
 </ion-view>
