--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -33,3 +33,13 @@ h4{
     text-align: center;
 
 }
+
+#aboutTextTitle{
+    font-size: 3em;
+}
+.aboutTextContent{
+    font-size: 2em;
+}
+#aboutTextCreatedBy{
+    font-size: 1.5em;
+}
