--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -26,6 +26,24 @@
        </li>
      </ul>
     </div>
+
+
+    <ion-item href="#" ng-click="ah.albums(ah.artist)" >Albums</ion-item>
+    <div ng-show="ah.albumClicked">
+      <ul ng-repeat="item in ah.albumResults">
+        <li class="item item-thumbnail-left">
+          <img class="rcImg" class="cover" ng-src="{{item.images[1].url}}"/>
+          <div>
+            {{"Album: " + item.name}} </br>
+          </div>
+
+          <div class="item-button-right">
+            <button class="button item-button-right">Purchase</button>
+          </div>
+        </li>
+      </ul>
+    </div>
+
     <!--<h3 ng-click="ah.artistSearch(ah.artist)">Get Stuff</h3>-->
 
     <!--<h2 ng-click="ah.bandTracks()">BAND TRACKS</h2>-->
