--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -21,7 +21,10 @@
          </div>
 
          <div class="item-button-right">
-           <button class="button item-button-right">Purchase</button>
+           <div class="buttons">
+            <button class="button item-button-right">Buy</button> <br>
+            <button class="button item-button-right">Lyrics</button>
+           </div>
          </div>
        </li>
      </ul>
