--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -23,8 +23,8 @@
 
          <div class="item-button-right">
            <div class="buttons">
-            <button class="button item-button-right">Buy</button> <br>
-            <button class="button item-button-right">Lyrics</button>
+            <button class="button item-button-right button-small" ng-click="ah.songLyrics(ah.artist, item.name)">Lyrics</button> <br>
+            <button class="button item-button-right button-small" ng-click="ah.buyTrack(ah.artist, item.name)">Buy</button>
            </div>
          </div>
        </li>
@@ -37,12 +37,33 @@
       <ul ng-repeat="item in ah.albumResults">
         <li class="item item-thumbnail-left">
           <img class="rcImg" class="cover" ng-src="{{item.images[1].url}}"/>
-          <div>
-            {{"Album: " + item.name}} </br>
-          </div>
+
 
           <div class="item-button-right">
-            <button class="button item-button-right">Purchase</button>
+            <button class="button item-button-right" ng-click="ah.buyAlbum(ah.artist, item.name)">Buy</button>
+          </div>
+          <div>
+            <span class="rcArtistName"> {{"Album:"}} </span> </br> </br>
+            {{ item.name }}
+          </div>
+        </li>
+      </ul>
+    </div>
+
+
+    <ion-item href="#" ng-click="ah.news(ah.artist)" >About the Artist</ion-item>
+    <div ng-show="ah.newsClicked">
+      <ul>
+        <li class="item item-thumbnail-left">
+          {{ah.wikiResults}}
+
+
+          <div class="item-button-right">
+            <button class="button item-button-right">Buy</button>
+          </div>
+          <div>
+            <span class="rcArtistName"> News: </span> </br> </br>
+
           </div>
         </li>
       </ul>
