--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,9 +4,9 @@
       <ion-list>
         <!--<ion-item ui-sref="tabsController.popularMusiq">Popular Musiq</ion-item>-->
         <ion-item ui-sref="tabsController.newMusiq">Album Search</ion-item>
-        <ion-item ui-sref="tabsController.artistNameSearch">Artist Name Search</ion-item>
-        <ion-item ui-sref="tabsController.songTitleSearch">Song Title Search</ion-item>
-        <ion-item ui-sref="tabsController.musiqGenreSearch">Related Artist Search</ion-item>
+        <ion-item ui-sref="tabsController.artistNameSearch">Artist Search</ion-item>
+        <ion-item ui-sref="tabsController.songTitleSearch">Song Search</ion-item>
+        <ion-item ui-sref="tabsController.musiqGenreSearch">Related Search</ion-item>
       </ion-list>
 
 
